--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+
+    <title>General Knowleadge Quiz Game</title>
 </head>
+
 <body>
 
-    <h1>Hello</h1>
+    <h1 class="heading">General Knowleadge Quiz</h1>
+    <div class="container">
+        <div id="question-container" class="hide">
+        <div id="question">Question</div>
+        <div id="answer-buttons" class="btn-grid">
+            <button class="btn">Answer 1</button>
+            <button class="btn">Answer 2</button>
+            <button class="btn">Answer 3</button>
+            <button class="btn">Answer 4</button>
+
+        </div>
+        </div>
+
+
+        <div class="controls">
+            <button id="start-btn" class="start-btn btn">Start</button>
+            <button id="next-btn" class="next-btn hide">Next</button>
+        </div>
+    </div>
+
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
