Add questions in Java for quiz

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </li> 
         </div>
 
-        <button id="submit">Submit</button>
+        <button id="next-btn">Next</button>
     </div>
 
 
