--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
     <div class="quiz-container" id="quiz">
         <div class="quiz-top">
             <h2 id="question">Quiz Test</h2>
+            <p id ="progress">Question x of y</p>
             <ul>
                 <li>
                     <input type="radio" name="answer" id="a" class="answer">
-                    <label for "a" id="a_text">Answer</label>
+                    <label for "a" id="a_text">Answer 1</label>
                 </li>
         
 
             <li>
                 <input type="radio" name="answer" id="b" class="answer">
-                <label for "b" id="b_text">Answer</label>
+                <label for "b" id="b_text">Answer 2</label>
             </li>
 
             <li>
                 <input type="radio" name="answer" id="c" class="answer">
-                <label for "c" id="c_text">Answer</label>
+                <label for "c" id="c_text">Answer 3</label>
             </li>
 
             <li>
                 <input type="radio" name="answer" id="d" class="answer">
-                <label for "d" id="d_text">Answer</label>
+                <label for "d" id="d_text">Answer 4</label>
             </li> 
         </div>
+       
 
         <button id="next-btn">Next</button>
     </div>
