--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="description" content="Play knowledge general quiz">
+    <meta name="keywords" content="quiz , game, answers, question, general, knowledge, ">
 
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!--Title-->
     <title>General Knowleadge Quiz Game</title>
-  
-    
-</head>
 
+</head>
 <body>
 
-   <div class="quiz-container" id="quiz">
+    <div class="quiz-container" id="quiz">
         <div class="quiz-top">
             <h2 id="question">Quiz Test</h2>
 
-            <!--Create the -->
+            <!--Create the Quiz List-->
 
             <ul>
                 <li>
                     <input type="radio" name="answer" id="a" class="answer">
                     <label for "a" id="a_text">Answer 1</label>
                 </li>
-
 
                 <li>
                     <input type="radio" name="answer" id="b" class="answer">
@@ -42,14 +42,15 @@
                     <input type="radio" name="answer" id="d" class="answer">
                     <label for "d" id="d_text">Answer 4</label>
                 </li>
+            </ul>
         </div>
 
-
+        <!--Button-->
         <button id="next-btn">Next</button>
     </div>
-
 
     <script src="assets/js/script.js"></script>
 </body>
 
 </html>
+
