--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <!--Title-->
     <title>General Knowleadge Quiz Game</title>
+    
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+
 
 </head>
 
@@ -33,10 +36,6 @@
             <p>Good luck and have fun! It is all about the learning journey!</p>
 
 
-            <div id="timer">Time Left: <span id="time">15</span> seconds</div>
-
-
-
         </div>
     </div>
 
@@ -48,6 +47,7 @@
 
 
             <!--Create the Quiz List-->
+            <div id="timer">Time Left: <span id="time">15</span> seconds</div>
 
             <ul>
                 <li>
