--- a/404.html
+++ b/404.html
@@ -13,20 +13,19 @@
 
     <!--Title-->
     <title>General Knowleadge Quiz Game</title>
+    <!--Favicon borrowed from Love Math Project-->
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+
 
 </head>
 
 <body>
-    <header>
-        <a href="index.html"></a>
-        <section class="error">
-            <h1> Oh no, the page you were looking for can not be found!</h1>
-            <div class="div_a"><a href="index.html">Go back home</a></div>
-        </section>
-    </header>
+    <main class="container">
+        <h1>404- Page not found</h1>
+        <img src="assets/images/pexels-erio-noen-116283115-10224729.jpg" alt="Movie nothing to see here" class="error-img">
+        <p>The page you are looking for cannot be found <a href="index.html">Please click to go back!</a></p>
+    </main>
 
+    </body>
 
-
-</body>
-
-</html>
+    </html>
