--- a/index.html
+++ b/index.html
@@ -13,17 +13,14 @@
 
     <!--Title-->
     <title>General Knowleadge Quiz Game</title>
-    
+    <!--Favicon borrowed from Love Math Project-->
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
 
 </head>
 
 <body>
-    <a href="index.html"></a>
-
-
-    <button id="openModal">Start Quiz</button>
+    <!-- <button id="openModal">Start Quiz</button>
 
     <div id="myModal" class="modal">
         <div class="modal-content">
@@ -35,9 +32,8 @@
             <p>4. No cheating!</p>
             <p>Good luck and have fun! It is all about the learning journey!</p>
 
-
         </div>
-    </div>
+    </div> -->
 
 
 
